--- a/client/client/src/Styles/Login.css
+++ b/client/client/src/Styles/Login.css
@@ -1,11 +1,20 @@
+
+.parent{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9f9f9;
+}
 .login {
     max-width: 400px;
-    margin: 0 auto;
+    background-color: white;
     padding: 20px;
     border: 1px solid #e5e7eb;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    
   }
   
   .login h1 {
@@ -14,16 +23,16 @@
   }
   
   .login input {
-    width: 100%;
-    padding: 10px;
+    width: 90%;
+    padding: 15px 5%;
     margin-bottom: 15px;
     border: 1px solid #e5e7eb;
     border-radius: 5px;
   }
   
-  .login button {
+  .login .submit {
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     background-color: #1e3a8a;
     color: white;
     border: none;
@@ -31,7 +40,12 @@
     cursor: pointer;
   }
   
-  .login button:hover {
+  .login .submit:hover {
     background-color: #fbbf24;
   }
   
+  .link{
+    margin-top: 15px;
+    background-color: white;
+    border: none;
+  }
