--- a/client/client/src/Styles/SignUp.css
+++ b/client/client/src/Styles/SignUp.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    font-family: Arial, sans-serif;
+    
     background-color: #f9f9f9;
     min-height: 100vh;
   }
@@ -39,11 +39,11 @@
   
   .form-input,
   .form-select {
-    width: 100%;
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    width: 90%;
+    padding: 15px 5%;
+    margin-bottom: 15px;
+    border: 1px solid #e5e7eb;
+    border-radius: 5px;
     outline: none;
     transition: border-color 0.2s;
   }
@@ -55,7 +55,7 @@
   
   .form-button {
     width: 100%;
-    padding: 10px;
+    padding: 15px 10px;
     font-size: 1rem;
     color: #fff;
     background-color: #007bff;
