--- a/client/client/src/Styles/Attendance.css
+++ b/client/client/src/Styles/Attendance.css
@@ -4,6 +4,8 @@
     background-color: #f3f4f6;
     border: 1px solid #e5e7eb;
     border-radius: 5px;
+    width: 90%;
+    margin-inline: auto;
   }
   
   h3 {
