--- a/client/client/src/Styles/Navbar.css
+++ b/client/client/src/Styles/Navbar.css
@@ -5,10 +5,11 @@
     background-color: #1e3a8a;
     padding: 10px 20px;
     color: white;
+    height: 50px;
   }
   
   .navbar-logo {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
   }
   
