--- a/client/client/src/Styles/SignUp.css
+++ b/client/client/src/Styles/SignUp.css
@@ -7,7 +7,7 @@
     justify-content: center;
     padding: 20px;
     
-    background-color: #f9f9f9;
+    background-color:  ;
     min-height: 100vh;
   }
   
@@ -21,9 +21,10 @@
     width: 100%;
     max-width: 400px;
     background: #fff;
-    padding: 20px;
+    padding: 25px;
+    border: 1px solid #e5e7eb;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .form-group {
@@ -58,7 +59,7 @@
     padding: 15px 10px;
     font-size: 1rem;
     color: #fff;
-    background-color: #007bff;
+    background-color: #1e3a8a;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -68,4 +69,78 @@
   .form-button:hover {
     background-color: #0056b3;
   }
+
+  .role-container {
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    background: #f8f9fa;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 300px;
+  }
+  
+  h3 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #333;
+  }
+  
+  .radio-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    border-radius: 5px;
+    padding: 10px 5px;
+    margin-bottom: 10px;
+    background:  #f9f9f9;
+    border: 1px solid #e5e7eb;
+  }
+  
+  .radio-label {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    padding-left: 30px;
+  }
+  
+  .radio-label input {
+    display: none;
+  }
+  
+  .custom-radio {
+    position: absolute;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #007bff;
+    background: #fff;
+    transition: 0.3s;
+  }
+  
+  .radio-label input:checked + .custom-radio {
+    background: #007bff;
+    border: 2px solid #0056b3;
+  }
+  
+  .radio-label input:checked + .custom-radio::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    background: white;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .radio-label:hover .custom-radio {
+    border-color: #0056b3;
+  }
+  
   
